# python

./: .gitignore  CHANGELOG.md  README.md  build.cmd  fix_imports.py  main.py  pyproject.toml
.github/workflows/: release.yml  test.yml
proto/: EmailData.proto  auth.proto  email.proto  group.proto
src/sendlix/: __init__.py  _compat.py  auth.py  constants.py
src/sendlix/clients/: __init__.py  _helpers.py  client.py  email_client.py  group_client.py
tests/: conftest.py  test_auth.py  test_email_client.py  test_group_client.py
